<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".OtherInfo"
    android:orientation="vertical"
    android:focusable="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="right">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:baselineAligned="false"
                android:layout_weight="3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/otherInfoTittle"
                    android:id="@+id/textView4"
                    android:layout_weight="1"
                    android:textSize="32dp"
                    android:textStyle="bold"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hobbies"
                    android:id="@+id/textView3" />


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/read"
                            android:id="@+id/leer"/>

                        <RatingBar
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/ratingBar"
                            android:numStars="5"
                            android:isIndicator="false"
                            android:clickable="false"
                            android:layout_gravity="center_vertical"
                            style="@style/Widget.AppCompat.RatingBar.Indicator" />
                    </LinearLayout>


                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/watchtv"
                            android:id="@+id/vertv" />
                        <RatingBar
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/ratingBar2"
                            android:numStars="5"
                            android:isIndicator="false"
                            android:clickable="false"
                            style="@style/Widget.AppCompat.RatingBar.Indicator" />
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/dance"
                            android:id="@+id/bailar" />
                        <RatingBar
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/ratingBar3"
                            android:numStars="5"
                            android:isIndicator="false"
                            android:clickable="false"
                            style="@style/Widget.AppCompat.RatingBar.Indicator" />
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/sing"
                            android:id="@+id/cantar" />
                        <RatingBar
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/ratingBar4"
                            android:numStars="5"
                            android:isIndicator="false"
                            android:clickable="false"
                            style="@style/Widget.AppCompat.RatingBar.Indicator" />
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/swim"
                            android:id="@+id/nadar" />
                        <RatingBar
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/ratingBar5"
                            android:numStars="5"
                            android:isIndicator="false"
                            android:clickable="false"
                            style="@style/Widget.AppCompat.RatingBar.Indicator" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="1">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/show"
                    android:id="@+id/mostrar"
                    android:onClick="mostrarContacto" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/results" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>